--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Bucket Updates
-      uses: Ash258/Scoop-GithubActions@stable-win
+      uses: Ash258/Scoop-GithubActions@main-win
       env:
         GITH_EMAIL: development@voke.dev
         SKIP_UPDATED: '1'
