--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -13,7 +13,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Bucket Updates
-      uses: Ash258/Scoop-GithubActions@main-win
+      uses: shovel-org/GithubActions@main
       env:
         GITH_EMAIL: development@voke.dev
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SKIP_UPDATED: '1'
