--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -2,7 +2,7 @@ name: Auto Update
 
 on:
   schedule:
-  - cron: '*/30 * * * *'
+  - cron: '0 * * * *'
 
 jobs:
   deploy:
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Bucket Updates
       uses: shovel-org/GithubActions@main
